src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #8c1515;
  --ifm-color-primary-dark: #506A7A;
  --ifm-color-primary-darker: #234154;
  --ifm-color-primary-darkest: #102938;
  --ifm-color-primary-light: #D17171;
  --ifm-color-primary-lighter: #D98989;
  --ifm-color-primary-lightest: #DEA2A2;
  --ifm-code-font-size: 90%;
  --ifm-link-color: var(--ifm-color-primary-darker);
  --ifm-menu-color: #000000;
  --ifm-menu-color-active: var(--ifm-color-primary-darker): --ifm-navbar-link-active-color: var(--ifm-color-primary-darker);
  --ifm-navbar-link-hover-color: var(--ifm-color-primary-darker);
  --ifm-breadcrumb-color-active: var(--ifm-color-primary-darker);
  --ifm-toc-border-color: transparent;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: #b64b4b;
  /*#991D1D;*/
  --ifm-color-primary-dark: #506A7A;
  --ifm-color-primary-darker: #234154;
  --ifm-color-primary-darkest: #102938;
  --ifm-color-primary-light: #4A89B0;
  --ifm-color-primary-lighter: #577E96;
  --ifm-color-primary-lightest: #8CBEDE;
  --ifm-link-color: var(--ifm-color-primary-lighter);
  --ifm-menu-color: #FFFFFF;
  --ifm-menu-color-active: var(--ifm-color-primary-lighter): --ifm-navbar-link-active-color: var(--ifm-color-primary-lighter);
  --ifm-navbar-link-hover-color: var(--ifm-color-primary-lighter);
  --ifm-breadcrumb-color-active: var(--ifm-color-primary-lighter);
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

[data-theme='dark'] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

html[data-theme='dark'] footer {
  background-color: #242424;
}

html[data-theme='light'] footer {
  background-color: #f1f1f1;
}


/**@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
:root {
  --ifm-font-family-base: 'Open Sans';
}*/
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');

:root {
  --ifm-font-family-base: 'Roboto';
}

.navbar .navbar__items {
  flex: auto;
}


/* Header Dropdown Menu */
.dropdown__link {
  font-size: inherit;
}

@font-face {
  font-family: 'Samarkan';
  src: url('../../static/fonts/samarkan.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}


/* Remove shadow on the left */
:root {
  --ifm-global-shadow-md: 0px;
}

/* Announcement Bar */
div[class^='announcementBarContent'] {
  background-color: var(--ifm-background-surface-color);
  color: var(--ifm-font-color-base);
}

div[class^='announcementBarContent'] a {
  color: var(--ifm-link-color);
  text-decoration: inherit;
}

div[class^='announcementBarContent'] a:hover {
  color: var(--ifm-link-color);
  text-decoration: underline;
}

.post-content p {
  text-align: justify;
}

h2 {
  font-size: 1.8rem;
  text-align: center;
  padding-bottom: 2rem;
  color: #c85555;
}

h3 {
  font-size: 1.4rem;
}

h4 {
  font-size: 1.2rem;
}

/**[class^=anchor] {
    font-size: 1.50rem;
}*/

p {
  font-size: 1.15rem;
  text-align: justify;
}

[class^=hero__title] {
  /*font-family: 'Anton';*/
  font-family: 'Oswald';
  font-weight: lighter;
  font-style: normal;
  font-size: 3.5rem;
  overflow-wrap: normal;
}

[class^=footerLogoLink] {
  opacity: 1!important;
}

.samarkan {
  font-family: 'Samarkan';
  color: #c85555;
}

[class^=hero__subtitle] {
  font-size: 1.3rem;
  text-align: center;
}

.iframe-container {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 100%;
}

.iframe-responsive {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.left-logo{
  margin-left: 1rem;
}

.right-links{
  margin-top: 2rem;
  margin-left: 1.25rem;
}

.footer__title{
  font-size: 1.4rem;
  margin-bottom: 0.25rem;
}

.center{
  text-align: center;
}

.theme-doc-sidebar-item-link-level-1, .theme-doc-sidebar-item-category-level-1 {
  font-weight: 500;
}

.theme-doc-sidebar-item-link-level-2{
  font-size: 0.875rem;
  font-weight: normal;
}

html[data-theme='light'] .footer__title{
  color: #4b4b4b;
}

html[data-theme='light'] .footer__link-item{
  color: #4b4b4b;
}

html[data-theme='light'] .footer__copyright{
  color: #4b4b4b;
}

.faq-heading, .software-heading{
  padding-bottom: 0.25rem;
}

.faq-toc{
  font-size: 1.15rem;
}

table tr:nth-child(2n){
  background-color: transparent;
}

